--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ cython_debug/
 PythonFundamentalsMay2023/5.Lists_advanced/main.py
 *.xml
 PythonFundamentalsMay2023/5.Lists_advanced/.idea/5.Lists_advanced.iml
+PythonAdvanced2023/main.py
