--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ PythonFundamentalsMay2023/5.Lists_advanced/main.py
 *.xml
 PythonFundamentalsMay2023/5.Lists_advanced/.idea/5.Lists_advanced.iml
 PythonAdvanced2023/main.py
+*.zip
