--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ PythonFundamentalsMay2023/5.Lists_advanced/main.py
 PythonFundamentalsMay2023/5.Lists_advanced/.idea/5.Lists_advanced.iml
 PythonAdvanced2023/main.py
 *.zip
+*.txt
