first steps in OPP, classes and objects

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,4 @@ PythonFundamentalsMay2023/5.Lists_advanced/.idea/5.Lists_advanced.iml
 PythonAdvanced2023/main.py
 *.zip
 *.txt
+PythonOPP2023/02.ClassesAndObjects/random.py
